Agregando SEO al projecto

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./imagenes/mechalogo.png" type="image/x-icon">
-    <meta name="description" content="Mecha sabores diferentes es un negocio de cocina, el cual ofrece varios servicios
-    entre ellos restaurante, catering, delivery, etc.">
-
+    <link rel="shortcut icon" href="./imagenes/mechalogo.ico" type="image/x-icon">
+    <meta name="description"
+        content="Mecha sabores diferentes es un negocio de cocina el cual ofrece varios servicios entre ellos catering, delivery, etc">
+    <meta name="keywords" content="Mecha sabores diferentes, pizzeria, delivery, Tala, catering, huerta mecha">
+    <meta propery="og:type" content="Web Site">
+    <meta propery="og:title" content="Mecha Sabores Diferentes: pizzeria y servicios de catering">
+    <meta propery="og:url" content="https://mechasaboresdiferentes.000webhostapp.com/">
+    <meta propery="og:image" content="https://mechasaboresdiferentes.000webhostapp.com/imagenes/mechalogo.png">
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -23,7 +27,7 @@
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <title>Mecha Sabores Diferentes: toda la informacion sobre la pizzeria, restaurante y servicios </title>
+    <title>Mecha Sabores Diferentes: pizzeria y servicios de catering</title>
 </head>
 
 <body>
@@ -32,7 +36,8 @@
     <header id="inicio">
         <nav class="navbar navbar-expand-md pt-0 pb-0">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./imagenes/mechalogo.png" class="logo__img" alt=""></a>
+                <a class="navbar-brand" href="#"><img src="./imagenes/mechalogo.png" class="logo__img"
+                        alt="logo de la empresa mecha sabores diferentes"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -133,7 +138,7 @@
                 </div>
 
                 <div class="nosotros__masinfo">
-                    <a href="./paginas/huerta.html" target="_blank">Conoce nuestra huerta</a>
+                    <a href="./paginas/huerta.html" target="_blank">Conoce la huerta de Mecha</a>
                 </div>
             </div>
         </section>
@@ -228,7 +233,7 @@
 
                 <div class="trabajos__instagram"><a href="https://www.instagram.com/mecha_saboresdiferentes/"
                         target="_blank">
-                        <p> Descubre más trabajos</p>
+                        <p> Descubre más trabajos de Mecha</p>
                     </a>
                 </div>
             </div>
