--- a/paginas/huerta.html
+++ b/paginas/huerta.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../imagenes/mechalogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/mechalogo.ico" type="image/x-icon">
+    <meta name="description"
+        content="Mecha sabores diferentes es un negocio de cocina el cual ofrece varios servicios entre ellos catering, delivery, etc">
+    <meta name="keywords" content="Mecha sabores diferentes, pizzeria, delivery, Tala, catering, huerta mecha">
+    <meta propery="og:type" content="Web Site">
+    <meta propery="og:title" content="Mecha Sabores Diferentes: pizzeria y servicios de catering">
+    <meta propery="og:url" content="https://mechasaboresdiferentes.000webhostapp.com/">
+    <meta propery="og:image" content="https://mechasaboresdiferentes.000webhostapp.com/imagenes/mechalogo.png">
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +25,7 @@
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <title>Mecha Sabores Diferentes</title>
+    <title>Mecha Sabores Diferentes: nuestra huerta en casa</title>
 </head>
 
 <body>
@@ -28,7 +36,7 @@
             <div class="huerta__contenedor">
                 <div class="logo__contenedor">
                     <a href="../index.html"><img class="huerta__logo" src="../imagenes/mechalogo.png"
-                            alt="mechalogo"></a>
+                            alt="logo de mecha sabores diferentes"></a>
                 </div>
                 <div class="huerta__titulo">
                     <h1>HUERTA MECHA SABORES DIFERENTES</h1>
